[project]
name = "italian-queues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
